fix: 右键菜单出现时的z-index属性

--- a/styles/context-menu.less
+++ b/styles/context-menu.less
@@ -9,7 +9,7 @@
       background-color: #fff;
       border: 1px solid @gray-4;
       box-shadow: 3px 3px 4px -2px rgba(0,0,0,.6);
-      z-index: 6;
+      z-index: 15;
       min-width: 150px;
     }
 
